--- a/data/catalog/packages/terminals.yml
+++ b/data/catalog/packages/terminals.yml
@@ -189,3 +189,212 @@ packages:
       summary: Cross-shell prompt with rich contextual information.
       homepage: "https://starship.rs"
       tags: [shell]
+    - id: alacritty
+      name: Alacritty
+      manager: winget
+      command: "winget install --id Alacritty.Alacritty -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Fast, cross-platform, OpenGL terminal emulator.
+      homepage: "https://alacritty.org"
+      tags: [terminal, emulator]
+    - id: kitty
+      name: Kitty
+      manager: winget
+      command: "winget install --id KovidGoyal.Kitty -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Fast, feature-rich, GPU-based terminal emulator.
+      homepage: "https://sw.kovidgoyal.net/kitty"
+      tags: [terminal, emulator]
+    - id: wezterm
+      name: WezTerm
+      manager: winget
+      command: "winget install --id WezFurlong.WezTerm -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: GPU-accelerated cross-platform terminal emulator.
+      homepage: "https://wezfurlong.org/wezterm"
+      tags: [terminal, emulator]
+    - id: hyper
+      name: Hyper
+      manager: winget
+      command: "winget install --id Hyper.Hyper -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Electron-based terminal emulator with web technologies.
+      homepage: "https://hyper.is"
+      tags: [terminal, emulator]
+    - id: tabby
+      name: Tabby
+      manager: winget
+      command: "winget install --id Tabby.Tabby -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Modern terminal with built-in SSH and Telnet client.
+      homepage: "https://tabby.sh"
+      tags: [terminal, emulator]
+    - id: warp
+      name: Warp
+      manager: winget
+      command: "winget install --id Warp.Warp -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: AI-powered terminal with modern features.
+      homepage: "https://www.warp.dev"
+      tags: [terminal, emulator]
+    - id: terminus
+      name: Terminus
+      manager: winget
+      command: "winget install --id Eugeny.Terminus -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Modern terminal with split panes and tabs.
+      homepage: "https://eugeny.github.io/terminus"
+      tags: [terminal, emulator]
+    - id: termius
+      name: Termius
+      manager: winget
+      command: "winget install --id Termius.Termius -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Cross-platform SSH client with modern interface.
+      homepage: "https://termius.com"
+      tags: [terminal, ssh]
+    - id: mobaxterm
+      name: MobaXterm
+      manager: winget
+      command: "winget install --id Mobatek.MobaXterm -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Enhanced terminal for Windows with X11 server.
+      homepage: "https://mobaxterm.mobatek.net"
+      tags: [terminal, ssh]
+    - id: putty
+      name: PuTTY
+      manager: winget
+      command: "winget install --id PuTTY.PuTTY -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: SSH and telnet client for Windows.
+      homepage: "https://www.putty.org"
+      tags: [terminal, ssh]
+    - id: winscp
+      name: WinSCP
+      manager: winget
+      command: "winget install --id WinSCP.WinSCP -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: SFTP, SCP, and FTP client for Windows.
+      homepage: "https://winscp.net"
+      tags: [terminal, ftp]
+    - id: filezilla
+      name: FileZilla
+      manager: winget
+      command: "winget install --id FileZilla.FileZilla -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Cross-platform FTP, FTPS, and SFTP client.
+      homepage: "https://filezilla-project.org"
+      tags: [terminal, ftp]
+    - id: cyberduck
+      name: Cyberduck
+      manager: winget
+      command: "winget install --id Cyberduck.Cyberduck -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Libre server and cloud storage browser.
+      homepage: "https://cyberduck.io"
+      tags: [terminal, ftp]
+    - id: babun
+      name: Babun
+      manager: winget
+      command: "winget install --id Babun.Babun -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Windows shell based on Cygwin and zsh.
+      homepage: "https://babun.github.io"
+      tags: [terminal, shell]
+    - id: cygwin
+      name: Cygwin
+      manager: winget
+      command: "winget install --id Cygwin.Cygwin -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Unix-like environment and command-line interface for Windows.
+      homepage: "https://www.cygwin.com"
+      tags: [terminal, shell]
+    - id: git-bash
+      name: Git Bash
+      manager: winget
+      command: "winget install --id Git.Git -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Bash shell for Windows with Git integration.
+      homepage: "https://git-scm.com"
+      tags: [terminal, shell]
+    - id: powershell-ise
+      name: PowerShell ISE
+      manager: winget
+      command: "winget install --id Microsoft.PowerShell.ISE -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Integrated Scripting Environment for PowerShell.
+      homepage: "https://docs.microsoft.com/powershell/scripting/windows-powershell/ise"
+      tags: [terminal, shell]
+    - id: powershell-studio
+      name: PowerShell Studio
+      manager: winget
+      command: "winget install --id SAPIEN.PowerShellStudio -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: PowerShell development environment with GUI designer.
+      homepage: "https://www.sapien.com/software/powershell_studio"
+      tags: [terminal, shell]
+    - id: powershell-pro
+      name: PowerShell Pro
+      manager: winget
+      command: "winget install --id SAPIEN.PowerShellPro -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Professional PowerShell development tools.
+      homepage: "https://www.sapien.com/software/powershell_pro"
+      tags: [terminal, shell]
+    - id: firefox
+      name: Mozilla Firefox
+      manager: winget
+      command: "winget install --id Mozilla.Firefox -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Free and open-source web browser.
+      homepage: "https://www.mozilla.org/firefox"
+      tags: [browser, web]
+    - id: edge
+      name: Microsoft Edge
+      manager: winget
+      command: "winget install --id Microsoft.Edge -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Modern web browser from Microsoft.
+      homepage: "https://www.microsoft.com/edge"
+      tags: [browser, web]
+    - id: safari
+      name: Safari
+      manager: winget
+      command: "winget install --id Apple.Safari -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Apple's web browser for Windows.
+      homepage: "https://www.apple.com/safari"
+      tags: [browser, web]
+    - id: midori
+      name: Midori
+      manager: winget
+      command: "winget install --id Midori.Midori -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: Lightweight web browser.
+      homepage: "https://www.midori-browser.org"
+      tags: [browser, web]
+    - id: konqueror
+      name: Konqueror
+      manager: winget
+      command: "winget install --id KDE.Konqueror -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: KDE web browser and file manager.
+      homepage: "https://www.kde.org/applications/internet/konqueror"
+      tags: [browser, web]
+    - id: epiphany
+      name: Epiphany
+      manager: winget
+      command: "winget install --id GNOME.Epiphany -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: GNOME web browser.
+      homepage: "https://wiki.gnome.org/Apps/Web"
+      tags: [browser, web]
+    - id: falkon
+      name: Falkon
+      manager: winget
+      command: "winget install --id KDE.Falkon -e --accept-package-agreements --accept-source-agreements"
+      requiresAdmin: false
+      summary: KDE web browser based on QtWebEngine.
+      homepage: "https://www.falkon.org"
+      tags: [browser, web]
+
