--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,27 @@ jobs:
                   /p:DebugSymbols=false
                   --no-build
 
+            - name: Verify packaged automation assets
+              shell: pwsh
+              run: |
+                  $publishDir = "src/TidyWindow.App/bin/Release/net8.0-windows/win-x64/publish"
+                  if (-not (Test-Path $publishDir)) {
+                    throw "Publish directory not found: $publishDir"
+                  }
+                  $requiredPaths = @(
+                    "automation/essentials/disk-checkup-and-fix.ps1",
+                    "automation/scripts/deep-scan.ps1",
+                    "automation/modules/TidyWindow.Automation.psm1",
+                    "data/catalog/bundles.yml",
+                    "data/catalog/packages/core.yml"
+                  )
+                  foreach ($relative in $requiredPaths) {
+                    $fullPath = Join-Path $publishDir $relative
+                    if (-not (Test-Path $fullPath)) {
+                      throw "Missing packaged asset: $relative"
+                    }
+                  }
+
             - name: Prepare portable bundle
               shell: pwsh
               run: |
@@ -93,3 +114,4 @@ jobs:
                   files: artifacts/*
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
